# Django-Course-Work

./: .env.example  README.md  auth_fixture.json  messenger_fixture.json  pyproject.toml  users_fixture.json
config/: settings.py  urls.py
messenger/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
messenger/management/commands/: start_mailing.py
messenger/migrations/: 0001_initial.py  0002_mailing_attempt.py  0003_alter_client_comment.py  0004_alter_mailing_status.py  0005_alter_mailing_options.py  0006_alter_attempt_mailing.py  0007_alter_attempt_options_alter_attempt_attempt_time.py  0008_alter_client_email.py  0009_alter_client_options_alter_mailing_options.py  0010_client_owner_message_owner.py  0011_alter_client_options_alter_mailing_options.py  0012_remove_message_owner_mailing_owner.py  0013_message_owner_alter_client_owner.py
messenger/templates/messenger/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  create_form.html  mailing_confirm_delete.html  mailing_confirm_end.html  mailing_confirm_start.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_start.html  main_page.html  message_confirm_delete.html  message_detail.html  navbar.html  (+3 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_token.py  0003_alter_customuser_first_name_and_more.py  0004_customuser_reset_password_token.py  0005_alter_customuser_options.py  0006_alter_customuser_options.py  0007_customuser_avatar_customuser_country.py
(+8 files in other folders)
